2022-12-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man, mdoc]: Refactor.  Rename a Boolean register to more
	clearly communicate its purpose.  This also reverses its sense.

	* tmac/an.tmac (TH): Rename `an-is-first-page-of-document` to
	`an*need-titles-reset`.  Drop redundant store.  Reverse sense of
	test.
	(initialization): Initialize it to zero.

	* tmac/mdoc/doc-common (Dd): Rename
	`doc-is-first-page-of-document` to `doc-need-titles-reset`.
	Drop redundant store.  Reverse sense of test.
	(initialization): Initialize it to zero.

2022-12-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tests]: Add future regression test for header/footer
	mishandling that wasn't already covered (not a live bug; was
	exposed by attempted refactoring).

	* tmac/tests/andoc_check-an-to-doc-transition.sh: Do it.
	* tmac/tmac.am (tmac_TESTS): Run test.

2022-12-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man, mdoc]: Trivially refactor.

	* tmac/an.tmac (an-start-new-document): Rename this...
	(an*break-page-with-new-number): ...to reflect its reduced
	responsibility.

	* tmac/mdoc/doc-common (doc-start-new-document): Rename this...
	(doc-break-page-with-new-number): ...to reflect its reduced
	responsibility.

2022-12-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man, mdoc]: Refactor to separate page number management from
	header trap management.

	* tmac/an.tmac (an-start-new-document): Stop removing
	`an-header` trap.
	(TH): Clear the trap here even if not continuously rendering,
	and call `an-start-new-document`.

	* tmac/mdoc/doc-common (doc-start-new-document): Stop removing
	`doc-header` trap.
	(Dd): Clear the trap here even if not continuously rendering,
	and call `doc-start-new-document`.

2022-12-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/mdoc/doc-common: Refactor for better parallelism with our
	man(7) implementation and to prepare for a synchronized change
	to both.